--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1",
     "shortid": "^2.2.15",
     "tmi.js": "^1.5.0",
     "ws": "^7.2.5"
